# dynamic_lidar_interpolation

./: CMakeLists.txt  README.md  package.xml
config/: interpolation_config.yaml
foxglove/: interpolated.json
include/dynamic_lidar_interpolation/: pointcloud_interpolation.hpp  temp.hpp
include/dynamic_lidar_interpolation/interpolation_algorithms/: bilateral_interpolation.hpp  bilinear_interpolation.hpp  edge_aware_interpolation.hpp  nearest_neighbor_interpolation.hpp  spline_interpolation.hpp
launch/: pointcloud_interpolation_launch.py
rviz/: interpolation.rviz
src/: pointcloud_interpolation_node.cpp
