<?xml version="1.0"?>
<package format="3">
  <name>dynamic_lidar_interpolation</name>
  <version>0.1.0</version>
  <description>Advanced ROS2 package for point cloud interpolation</description>
  <maintainer email="abdalrahman.m5959@gmail.com">Your Name</maintainer>
  <license>AGPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>yaml-cpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
